--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -39,7 +39,7 @@
 .about__text1 {
   padding-top: 0.5rem;
   font-size: var(--size-2xl);
-  color: var(--clr-peach);
+  color: var(--clr-stone700);
   font-weight: 1000;
   font-style: italic;
   text-transform: uppercase;
