--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
   --clr-red600: #dc2626;
   --clr-red800: #991b1b;
   --clr-btn: #f44e3f;
-  /* --clr-peach: #d33e43; */
+  --clr-peach: #d33e43;
 
   /* --clr-peach: #574240; */
   /* --clr-peach: #7c5056; */
