--- a/styles/components/swiper.css
+++ b/styles/components/swiper.css
@@ -218,6 +218,7 @@
 }
 
 .w-100 {
+  width: 500px;
   border-radius: 0.5rem;
 }
 
@@ -228,6 +229,7 @@
 }
 
 .modal-content {
+  width: 100%;
   border: none;
   border-radius: 1rem;
   background-color: var(--clr-stone-light);
