--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@
 * {
   margin: 0;
   line-height: calc(1em + 0.5rem);
-  /* border: 0.5px solid red; */
+  border: 0.5px solid red;
 }
 
 html {
@@ -54,7 +54,7 @@ html {
 
 body {
   /* font-family: "Maven Pro", sans-serif; */
-  background-color: white;
+  background-color: var(--clr-stone-light);
   color: var(--clr-stone-dark);
 }
 
