--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,8 @@
 * {
   margin: 0;
   line-height: calc(1em + 0.5rem);
-  border: 0.5px solid red;
+  /* border: 0.5px solid red; */
+  /* background: rgb(0 100 0 / 0.1) !important; */
 }
 
 html {
