--- a/styles/utils.css
+++ b/styles/utils.css
@@ -44,7 +44,7 @@
   /* box-shadow: rgba(0, 0, 0, 0.25) 0px -30px 60px -12px inset; */
 }
 
-.container {
+.main-wrapper {
   margin-left: auto;
   margin-right: auto;
   /* padding-left: 1rem; */
