--- a/styles/components/gallery.css
+++ b/styles/components/gallery.css
@@ -20,10 +20,14 @@
   /* border-radius: 1rem; */
 }
 
+.modal-content {
+  border-radius: 1rem;
+}
+
 .modal-body {
   padding: 0;
 }
 
 .img-fluid {
-  /* border-radius: 1rem; */
+  border-radius: 1rem;
 }
