--- a/styles/components/gallery.css
+++ b/styles/components/gallery.css
@@ -22,6 +22,8 @@
 
 .modal-content {
   border-radius: 1rem;
+  overflow: hidden;
+  border: 1px solid white;
 }
 
 .modal-body {
@@ -29,5 +31,4 @@
 }
 
 .img-fluid {
-  border-radius: 1rem;
 }
