--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,4 +1,5 @@
 .header {
+  width: 100%;
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
@@ -12,14 +13,14 @@
   padding-left: 2rem;
   padding-right: 2rem;
   border-radius: 5rem;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 15px 50px;
+  /* box-shadow: rgba(0, 0, 0, 0.25) 0px 15px 50px; */
   z-index: 1;
 }
 
 .header__menu {
   display: none;
   position: relative;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .header__left {
@@ -114,7 +115,7 @@
     color: var(--clr-red600);
   }
 
-  .header__link::after {
+  /* .header__link::after {
     content: "";
     display: block;
     width: 6px;
@@ -122,7 +123,7 @@
     background-color: var(--clr-red600);
     border-radius: 50%;
     position: absolute;
-    bottom: -10px;
+    bottom: -5px;
     left: 50%;
     transform: translate(-50%, 0);
     opacity: 0;
@@ -132,7 +133,7 @@
   .header__link:hover::after {
     opacity: 1;
     transform: translate(-50%, 5px);
-  }
+  } */
 
   .header__toggle {
     display: none;
