--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: var(--height);
   overflow: hidden;
-  mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
+
   z-index: -1;
   /* margin-top: 1rem; */
 }
@@ -19,9 +19,9 @@
   /* height: var(--height); */
   position: absolute;
   left: 100%;
-  animation: autoRun 200s linear infinite;
+  animation: autoRun 500s linear infinite;
   animation-delay: calc(
-    (200s / var(--quantity)) * (var(--position) - var(--quantity))
+    (500s / var(--quantity)) * (var(--position) - var(--quantity))
   ) !important;
   /* filter: grayscale(1); */
 }
@@ -48,7 +48,7 @@
 }
 
 .slider[reverse="true"] .slider__item {
-  animation: reversePlay 200s linear infinite;
+  animation: reversePlay 500s linear infinite;
 }
 
 @keyframes reversePlay {
@@ -61,9 +61,7 @@
 }
 
 .slider__container {
-  /* margin-top: 5.6rem; */
-  /* padding-top: 1.5rem; */
-  padding-top: 6rem;
-  /* padding-bottom: 2rem; */
+  margin-bottom: 10rem;
   /* background-color: var(--clr-stone-dark); */
+  /* mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent); */
 }
