--- a/styles/style.css
+++ b/styles/style.css
@@ -13,12 +13,15 @@
   --clr-red600: #dc2626;
   --clr-red800: #991b1b;
   --clr-btn: #f44e3f;
-  --clr-peach: #d33e43;
+  /* --clr-peach: #d33e43; */
 
   /* --clr-peach: #574240; */
   /* --clr-peach: #7c5056; */
   /* --clr-peach: #8f0014; */
   /* --clr-peach: #ba2431; */
+
+  /* --clr-peach: #790114; */
+  --clr-peach: #ca2e32;
 
   --clr-sky-dark: #172554;
   --clr-sky800: #155e75;
@@ -54,9 +57,10 @@ html {
 }
 
 body {
+  margin-top: 10rem;
   /* font-family: "Maven Pro", sans-serif; */
-  background-color: var(--clr-stone-light);
-  color: var(--clr-stone-dark);
+  background-color: #e1e0dd;
+  /* color: var(--clr-stone-dark); */
 }
 
 img,
