--- a/styles/utils.css
+++ b/styles/utils.css
@@ -23,32 +23,38 @@
 } */
 
 .btn {
-  display: block;
-  background-color: var(--clr-peach);
-  text-decoration: none;
-  letter-spacing: 0.05em;
-  color: var(--clr-red-light);
-  font-size: var(--size-xs);
-  font-weight: 800;
-  text-align: center;
+  display: inline-block;
   padding: 1em 2em;
-  border-radius: 0.5rem;
-  transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
-  /* text-transform: uppercase; */
+  border-radius: 5rem;
+  color: var(--clr-peach);
+  /* margin-top: 2rem; */
+  font-weight: bold;
+  font-size: 0.678rem;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: linear-gradient(
+    to right,
+    rgba(178, 135, 111, 0) 25%,
+    var(--clr-peach) 75%
+  );
+  background-position: 1% 50%;
+  background-size: 400% 300%;
+  border: 1px solid var(--clr-peach);
+  transition: 700ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .btn:hover {
-  transform: translateY(3px);
-  /* background-color: var(--clr-peach);
-  text-decoration: n; */
-  /* box-shadow: rgba(0, 0, 0, 0.25) 0px -30px 60px -12px inset; */
+  transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  color: white;
+  color: #fff;
+  background-position: 99% 50%;
 }
 
 .main-wrapper {
   margin-left: auto;
   margin-right: auto;
-  /* padding-left: 1rem; */
-  /* padding-right: 1rem; */
+  margin-bottom: 10rem;
 }
 
 .section {
@@ -58,13 +64,13 @@
 }
 
 span {
-  color: var(--clr-red600);
+  color: var(--clr-stone800);
   font-weight: 900;
 }
 
 .icon {
-  width: var(--size-4xl);
-  height: var(--size-4xl);
+  width: var(--size-5xl);
+  height: var(--size-5xl);
   color: var(--clr-peach);
 }
 
