--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -13,7 +13,7 @@
   padding-left: 2rem;
   padding-right: 2rem;
   border-radius: 5rem;
-  /* box-shadow: rgba(0, 0, 0, 0.25) 0px 15px 50px; */
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 15px 50px;
   z-index: 1;
 }
 
