--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,8 @@
   /* --clr-peach: #ba2431; */
 
   /* --clr-peach: #790114; */
-  --clr-peach: #ca2e32;
+  /* --clr-peach: #ca2e32; */
+  --clr-peach: #cd031b;
 
   --clr-sky-dark: #172554;
   --clr-sky800: #155e75;
@@ -47,6 +48,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   line-height: calc(1em + 0.5rem);
   /* border: 0.5px solid red; */
   /* background: rgb(0 100 0 / 0.1) !important; */
@@ -57,7 +59,7 @@ html {
 }
 
 body {
-  margin-top: 10rem;
+  /* margin-top: 10rem; */
   /* font-family: "Maven Pro", sans-serif; */
   background-color: #e1e0dd;
   /* color: var(--clr-stone-dark); */
@@ -82,7 +84,10 @@ button {
 }
 
 p,
-ul {
+ul,
+h1,
+h2,
+h3 {
   margin: 0;
 }
 
