--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,6 +1,5 @@
 .hero {
   display: flex;
-
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 3rem;
@@ -13,19 +12,26 @@
 }
 
 .hero__text1 {
-  font-size: var(--size-5xl);
+  font-family: "Orbitron", sans-serif;
+  text-transform: uppercase;
+  font-size: var(--size-7xl);
   color: var(--clr-peach);
   font-weight: 1000;
   line-height: 1;
 }
 
 .hero__text2 {
+  display: block;
+  font-size: 2.07rem;
+}
+
+.hero__text3 {
   padding-top: 1rem;
   /* padding-bottom: 1rem; */
   font-size: var(--size-base);
   color: var(--clr-stone600);
   font-weight: 400;
-  /* letter-spacing: 1px; */
+  letter-spacing: 0.75px;
 }
 
 .hero__btns {
@@ -41,7 +47,8 @@
 .hero__btn2 {
   /* align-self: center; */
   /* margin-top: 2rem; */
-  width: 100%;
+  /* width: 100%; */
+  width: 250px;
   display: flex;
   justify-content: space-between;
   gap: 1rem;
