--- a/styles/utils.css
+++ b/styles/utils.css
@@ -70,7 +70,7 @@ span {
 .icon {
   width: var(--size-6xl);
   height: var(--size-6xl);
-  color: var(--clr-peach);
+  color: var(--clr-red400);
 }
 
 /* xxs */
