--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -7,16 +7,18 @@
 }
 
 .about__card {
-  padding-bottom: 2rem;
+  /* padding-bottom: 2rem; */
+  /* height: 500px; */
   overflow: hidden;
   width: fit-content;
-  background-color: var(--clr-stone-light);
+  background-color: var(--clr-stone200);
   border-radius: 1rem;
-  display: flex;
+  /* display: flex; */
   /* align-items: flex-start; */
   justify-content: center;
   flex-wrap: wrap;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 25px 50px -20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 50px -20px;
+  border: 1px solid rgba(255, 255, 255, 0.9);
 }
 
 /* .about__card.main {
@@ -34,7 +36,7 @@
 } */
 
 .about__img {
-  /* border-radius: 1rem; */
+  border-radius: 0 0 0 5rem;
   width: 400px;
   object-fit: cover;
 }
@@ -52,9 +54,8 @@
 
 .about__text1 {
   /* padding-top: 1rem; */
-
   font-size: var(--size-2xl);
-  color: var(--clr-peach);
+  color: var(--clr-stone800);
   font-weight: 800;
   font-style: italic;
   /* text-transform: uppercase; */
@@ -63,7 +64,7 @@
 .about__text2 {
   padding-top: 2rem;
   font-size: var(--size-lg);
-  color: var(--clr-stone-dark);
+  color: var(--clr-stone-700);
   font-weight: 400;
   letter-spacing: 1px;
 }
