--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -34,9 +34,7 @@
 .slider .slider__list .slider__item img {
   width: 100%;
   border-radius: 1rem;
-  /* box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 1px, rgba(0, 0, 0, 0.05) 0px 4px 2px,
-    rgba(0, 0, 0, 0.05) 0px 8px 4px, rgba(0, 0, 0, 0.05) 0px 8px 8px,
-    rgba(0, 0, 0, 0.05) 0px 8px 16px; */
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 25px 50px -20px;
 }
 
 @keyframes autoRun {
