--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10rem;
+  gap: 5rem;
 }
 
 .about__card {
@@ -53,12 +53,13 @@
 }
 
 .about__text1 {
+  font-family: "Orbitron", sans-serif;
   padding-top: 0.5rem;
   font-size: var(--size-2xl);
   color: var(--clr-stone800);
   font-weight: 800;
-  font-style: italic;
-  /* text-transform: uppercase; */
+  /* font-style: italic; */
+  text-transform: uppercase;
 }
 
 .about__text2 {
@@ -70,6 +71,7 @@
 }
 
 .section__title {
+  font-family: "Orbitron", sans-serif;
   color: var(--clr-stone400);
   font-size: var(--size-7xl);
   font-weight: 1000;
