--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -2,7 +2,7 @@
   /* padding-top: 5rem; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 3rem;
   align-items: center;
   padding-bottom: 15rem;
