--- a/styles/components/gallery.css
+++ b/styles/components/gallery.css
@@ -1,7 +1,11 @@
 .gallery__text1 {
+  padding-top: 10rem;
+  font-family: "Orbitron", sans-serif;
   color: var(--clr-stone400);
   font-size: var(--size-7xl);
   font-weight: 1000;
+  text-align: left;
+  margin: 0;
 }
 
 .gallery {
