--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -10,8 +10,8 @@
   padding-bottom: 5rem;
   /* height: 500px; */
   overflow: hidden;
-  width: fit-content;
-  background-color: var(--clr-stone200);
+  width: 350px;
+  background-color: #2f2f2f;
   border-radius: 1rem;
   /* display: flex; */
   /* align-items: flex-start; */
@@ -19,6 +19,11 @@
   flex-wrap: wrap;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 50px -20px;
   border: 1px solid rgba(255, 255, 255, 0.5);
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 /* .about__card.main {
@@ -56,7 +61,7 @@
   font-family: "Orbitron", sans-serif;
   padding-top: 0.5rem;
   font-size: var(--size-2xl);
-  color: var(--clr-stone800);
+  color: #f6f6db;
   font-weight: 800;
   /* font-style: italic; */
   text-transform: uppercase;
@@ -65,7 +70,7 @@
 .about__text2 {
   padding-top: 2rem;
   font-size: var(--size-lg);
-  color: var(--clr-stone-700);
+  color: #f6f6db;
   font-weight: 400;
   letter-spacing: 1px;
 }
@@ -73,9 +78,11 @@
 .section__title {
   padding-top: 10rem;
   font-family: "Orbitron", sans-serif;
+  text-transform: uppercase;
+
   color: var(--clr-stone400);
   font-size: var(--size-7xl);
   font-weight: 1000;
-  text-align: left;
+  text-align: center;
   margin: 0;
 }
