--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -19,6 +19,9 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 15px 50px;
   z-index: 1000;
   transition: transform 0.3s ease-in-out;
+  /* background-color: var(--clr-stone200); */
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 50px -20px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .header.hidden {
