--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -28,7 +28,7 @@
   animation-delay: calc(
     (500s / var(--quantity)) * (var(--position) - var(--quantity))
   ) !important;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
   transition: 0.5s;
 }
 
