--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,8 @@ body {
   /* margin-top: 10rem; */
   /* font-family: "Maven Pro", sans-serif; */
   background-color: #e1e0dd;
+  /* background-color: #1e202b; */
+  background-color: #121212;
   /* color: var(--clr-stone-dark); */
 }
 
