--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -18,12 +18,16 @@
   justify-content: center;
   flex-wrap: wrap;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 50px -20px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+  border: 0.1px solid rgba(255, 255, 255, 0.5);
+  /* box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
     rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
     rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
     rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; */
+  /* background-color: black; */
+  color: white;
+  --angle: 45deg;
+  background: linear-gradient(var(--angle), rgb(25, 25, 25), #323232);
 }
 
 /* .about__card.main {
@@ -41,7 +45,7 @@
 } */
 
 .about__img {
-  border-radius: 0 0 0 5rem;
+  border-radius: 0 0 2rem 2rem;
   width: 400px;
   object-fit: cover;
 }
@@ -81,7 +85,7 @@
   text-transform: uppercase;
 
   color: var(--clr-stone400);
-  font-size: var(--size-7xl);
+  font-size: var(--size-5xl);
   font-weight: 1000;
   text-align: center;
   margin: 0;
