--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,6 +1,7 @@
 .hero {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   gap: 3rem;
@@ -77,7 +78,7 @@
   /* margin-top: 2rem; */
   display: flex;
 
-  gap: 1rem;
+  gap: 2rem;
   justify-content: space-between;
   align-items: center;
 }
@@ -86,24 +87,26 @@
 .hero__btn2 p {
   width: fit-content;
   font-weight: 400;
+  font-size: var(--size-xl);
 }
 
 .hero__logo {
-  /* margin-top: 6rem; */
+  /* padding-top: 6rem; */
   /* padding-top: 2rem; */
   /* padding-bottom: 2rem; */
   /* mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent); */
-  background-color: var(--clr-stone-dark);
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .hero__logo img {
-  margin: 0 auto;
-  width: 300px;
+  width: 200px;
 }
 
 .hero__icon {
-  width: var(--size-xl);
-  height: var(--size-xl);
+  width: var(--size-2xl);
+  height: var(--size-2xl);
 }
 
 .hero__container-slider {
@@ -123,7 +126,7 @@
   @media (min-width: 475px) {
     .hero__btn1,
     .hero__btn2 {
-      width: 250px;
+      width: fit-content;
     }
   }
 }
