--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -94,9 +94,9 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: 4rem;
+  top: 0;
   width: 100%;
-  padding: 1rem;
+  padding-top: 4rem;
   background-color: black;
   text-align: center;
 }
