--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 3rem;
   align-items: center;
 }
