--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -1,143 +1,27 @@
-.form {
-  width: 400px;
-  margin: auto;
-  background: white;
-  border-radius: 3px;
-  margin-top: 5em;
-  margin-bottom: 6em;
-  padding: 1.25em;
-}
-
-h3 {
-  font-size: 1.98em;
-  margin-bottom: 0.8em;
-  margin-top: 0.4em;
-  font-weight: 100;
-}
-
-.form-group {
-  position: relative;
-  opacity: 1;
-  transition: 0.6s;
-}
-
-.input-field-icon {
-  color: #bfc9ca;
-  font-size: 18px;
-  position: absolute;
-  right: 10px;
-  bottom: 12px;
-  transition: 0.6s;
-}
-
-.form-control {
-  transition: opacity 0.6s;
-  opacity: 1;
-  border: 0;
-  border-bottom: 2px solid #bdc3c7;
-  border-radius: 0;
-  background: white;
-  font-size: 15px;
-  line-height: 1.467;
-  padding: 4px;
-  height: 42px;
-  -webkit-appearance: none;
-}
-
-input,
-textarea {
-  transition: all 800ms;
-  font-family: "Roboto";
-  resize: none; /* removes the resize handle */
-  overflow: auto; /* removes default scrolling bars in IE */
-  outline: none;
-  font-family: inherit;
-  box-sizing: border-box;
+.contact {
   width: 100%;
-  padding: 0px 4px;
-  color: #34495e;
-  margin-top: 1.25em;
+  height: 100%;
+  min-height: 100vh;
+  background-color: #e1e0dd;
+  display: flex;
+  flex-direction: column;
 }
 
-.has-error input,
-.has-error textarea {
-  color: #e74c3c;
-  border-color: #e74c3c;
-}
-
-.has-error .input-field-icon {
-  color: #e74c3c;
-}
-
-.has-success input,
-.has-success textarea {
-  color: #2ecc71;
-  border-color: #2ecc71;
-}
-
-.has-success .input-field-icon {
-  color: #2ecc71;
-}
-
-input:focus,
-textarea:focus {
-  border-color: #48c9b0;
-  color: #34495e;
-}
-
-input:focus + .input-field-icon {
-  color: #34495e;
-}
-
-textarea.form-control {
-  height: 120px;
-  transition: 0.6s;
-}
-
-textarea.form-control:focus {
-  height: 200px;
-  border-color: #48c9b0;
-}
-
-.social {
-  display: block;
-  margin: auto;
-  width: 250px;
-}
-
-.social li {
-  display: inline-block;
-  list-style: none;
-  margin: auto;
-  margin-right: 10px;
-}
-
-.social li a {
-  display: block;
-  text-decoration: none;
-  color: #999;
-  border: 2px solid #999;
-  border-radius: 100%;
-  font-size: 26px;
-  width: 34px;
-  padding: 3px;
-  text-align: center;
-  transition: all 0.4s;
-}
-
-.social li a:hover {
-  background: #999;
-  color: white;
-}
-
-.social li a span {
-  margin-top: 4px;
+.contact__text {
+  padding-top: 1rem;
+  /* padding-bottom: 1rem; */
+  font-size: var(--size-2xl);
+  color: var(--clr-stone600);
+  font-weight: 400;
+  letter-spacing: 0.75px;
   text-align: center;
 }
 
-@media (max-width: 600px) {
-  .form {
-    width: 90%;
-    margin-top: 12%;
-  }
+.contact .hero__btns {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hero__btns .hero__btn3 {
+  width: 100%;
 }
