--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@
   margin: 0;
   padding: 0;
   line-height: calc(1em + 0.5rem);
-  /* border: 0.5px solid red; */
+  /* border: 0.5px solid green; */
   /* background: rgb(0 100 0 / 0.1) !important; */
 }
 
