--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -2,7 +2,7 @@
   position: relative;
   mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
   overflow: hidden;
-  /* padding-top: 3rem; */
+  padding-top: 4rem;
   /* padding-bottom: 1.4rem; */
 }
 
@@ -30,7 +30,7 @@
   animation-delay: calc(
     (500s / var(--quantity)) * (var(--position) - var(--quantity))
   ) !important;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
   transition: 0.5s;
 }
 
