--- a/styles/style.css
+++ b/styles/style.css
@@ -61,11 +61,31 @@ html {
 body {
   /* margin-top: 10rem; */
   /* font-family: "Maven Pro", sans-serif; */
-  background-color: #e1e0dd;
-  /* background-color: #1e202b; */
-  background-color: #121212;
+  /* background-color: #e1e0dd; */
+  background-color: #1e202b;
+  /* background-color: #121212; */
   /* color: var(--clr-stone-dark); */
 }
+
+/* body::before {
+  content: "";
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0.15) 1px,
+        transparent 1px 45px
+      )
+      50% 50% / 45px 45px,
+    linear-gradient(rgba(255, 255, 255, 0.15) 1px, transparent 1px 45px) 50% 50% /
+      45px 45px;
+  mask: linear-gradient(-25deg, transparent 30%, white);
+  top: 0;
+  transform-style: flat;
+  pointer-events: none;
+  z-index: -1;
+} */
 
 img,
 picture,
