--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -73,9 +73,9 @@
   font-size: var(--size-xl);
 }
 
-.hero__btn0 {
+/* .hero__btn0 {
   width: 100%;
-}
+} */
 
 .hero__logo-wrapper {
   position: absolute;
