--- a/styles/style.css
+++ b/styles/style.css
@@ -61,10 +61,11 @@ html {
 body {
   /* margin-top: 10rem; */
   /* font-family: "Maven Pro", sans-serif; */
-  /* background-color: #e1e0dd; */
+  background-color: #e1e0dd;
   /* background-color: #1e202b; */
-  background-color: #121212;
-  /* color: var(--clr-stone-dark); */
+  /* background-color: #121212; */
+  background-color: #343434;
+  color: var(--clr-stone-dark);
 }
 
 /* body::before {
