--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ body {
   background-color: #e1e0dd;
   /* background-color: #1e202b; */
   /* background-color: #121212; */
-  background-color: #343434;
+  /* background-color: #343434; */
   color: var(--clr-stone-dark);
 }
 
