--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -8,7 +8,7 @@
   gap: 3rem;
   /* padding-top: 10rem; */
   padding-bottom: 10rem;
-  background-color: #1c1c1c;
+  background-color: #121212;
 }
 
 .about__card {
@@ -25,7 +25,7 @@
   --angle: 45deg;
   background: linear-gradient(var(--angle), rgb(35, 35, 35), rgb(60, 60, 60));
 
-  background: linear-gradient(109.6deg, rgb(6, 2, 2) 32.4%, #177152 98.8%);
+  /* background: linear-gradient(109.6deg, rgb(6, 2, 2) 32.4%, #177152 98.8%); */
 }
 
 /* .about__card.one {
