--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   width: 375px;
-  height: 675px;
+  height: 640px;
   overflow: hidden;
   /* background-color: #2f2f2f; */
   border-radius: 2rem;
@@ -24,6 +24,8 @@
   border: 1px solid rgb(100, 100, 100);
   --angle: 45deg;
   background: linear-gradient(var(--angle), rgb(35, 35, 35), rgb(60, 60, 60));
+
+  background: linear-gradient(rgb(35, 35, 35), rgb(60, 60, 60));
 
   /* background: linear-gradient(109.6deg, rgb(6, 2, 2) 32.4%, #177152 98.8%); */
 }
@@ -41,9 +43,9 @@
   background: linear-gradient(rgb(35, 35, 35) 50%, #ff3a1e 110%);
 } */
 
-.about__img {
+/* .about__img {
   height: 45%;
-}
+} */
 
 .about__img img {
   border-radius: 0 0 0 5rem;
@@ -53,7 +55,7 @@
 }
 
 .about__info {
-  padding-top: 3rem;
+  padding-top: 2rem;
   padding-left: 2rem;
   padding-right: 2rem;
   display: flex;
@@ -111,5 +113,5 @@
 .icon.about__i2,
 .icon.about__i3,
 .icon.about__i4 {
-  color: #ffa51e;
+  color: #1e92ff;
 }
